--- a/styles/index.css
+++ b/styles/index.css
@@ -11,6 +11,11 @@
   @apply bg-blue-500 text-white font-bold py-2 px-4 rounded;
 }
 
+a {
+  color: blue;
+  text-decoration: underline;
+}
+
 /* Start purging... */
 @tailwind utilities;
 /* Stop purging. */
